--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sourdough</title>
+    <title>Pizza Crust</title>
 </head>
-
 <body>
-    <h1>Basic (But Delicious...) Sourdough Loaf</h1>
+    <h1>Sourdough Pizza Crust</h1>
 </body>
-
 </html>
