Complete Gambas recipe page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <h3><a href="recipes/sourdough.html">Sourdough</a></h3>
-        <h3><a href="recipes/fajitas.html">Chicken Fajitas</a></h3>
-        <h3><a href="recipes/pizza-crust.html">Sourdough Pizza Crust</a></h3> 
-        <h3><a href="recipes/gambas-al-ajillo.html">Gambas al Ajillo</a></h3>
-        <h3><a href="recipes/margaritas.html">Margarita Time</a></h3>   
-   
+          <ul>
+            <li><a href="recipes/sourdough.html">Sourdough</a></li>
+            <li><a href="recipes/fajitas.html">Chicken Fajitas</a></li>
+            <li><a href="recipes/pizza-crust.html">Sourdough Pizza Crust</a></li> 
+            <li><a href="recipes/gambas-al-ajillo.html">Gambas al Ajillo</a></li>
+            <li><a href="recipes/margaritas.html">Margarita Time</a></li>   
+        
+          </ul>
     </body>
 </html>
