Complete Fajitas recipe page

--- a/recipes/gambas-al-ajillo.html
+++ b/recipes/gambas-al-ajillo.html
@@ -29,7 +29,7 @@
             <li>Heat the extra virgin olive oil over medium heat until shimmering. Add the garlic and red pepper flakes. Cook for 1 minute or until the garlic begins to brown.</li>
             <li>Add the shrimp and paprika. Cook briefly, tossing regularly, until the flesh turns opaque (about 3 minutes or so; this will depend on the size of the shrimp). Remove the pan from the heat.</li>
             <li>Stir in sherry, lemon juice and parsley.</li>
-            <li>Transfer the shrimp and sauce to a serving bowl. Serve with your delicious sourdough bread.</li>
+            <li>Transfer the shrimp and sauce to a serving bowl. Serve with some delicious sourdough bread.</li>
             </li>
         </ol>
 
