--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -8,5 +8,40 @@
 </head>
 <body>
     <h1>Chicken Fajitas</h1>
+    <img src="../img/chicken-fajitas.jpg">
+
+    <h2>Best Weeknight Award Goes To:</h2>
+    <p>Sheet pan chicken fajitas! Thank you for being there when I only have the energy to do slightly more than open a bag of orange chicken. Chop up some onions, peppers, and chicken. Throw on some spices and toss it in the oven while your chasing kids around the kitchen. 30 minutes later you have a delicious meal that tastes like it spent much more time and effort than it did.</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>2 teaspoons chili powder
+            <li>2 teaspoons ground cumin
+            <li>2 teaspoons dried oregano
+            <li>1 teaspoon smoked paprika
+            <li>Kosher salt and freshly ground black pepper (to taste)
+            <li>1 ½ pounds boneless, skinless chicken breasts, cut into thin strips
+            <li>1 red bell pepper, cut into strips
+            <li>1 yellow bell pepper, cut into strips
+            <li>1 orange bell pepper, cut into strips
+            <li>1 red onion, cut into wedges
+            <li>3 cloves garlic, minced
+            <li>3 tablespoons olive oil     
+            <li> cup chopped fresh cilantro leaves
+            <li>2 tablespoons freshly squeezed lime juice
+            <li>6 8-inch flour or corn tortillas, warm
+        </ul>
+
+    <h3>Instructions</h3>
+
+        <ol>
+            <li>Preheat oven to 425 degrees F</li>
+            <li>In a small bowl, mix the spices together</li>
+            <li>Chop peppers, onions, and chicken into similar width strips. Toss in olive oil and spice mix until thoroughly incooperated.</li>
+            <li>Place in oven and bake for 25 minutes or until chicken is cooked through and veggies are crisp-tender. Stir in cilantro and lime juice.</li>
+            <li>Serve with warm tortillas, avocados, greek yogurt, hot sauce, and whatever else you fancy.</li> 
+
+
+        </ol>
+
 </body>
 </html>
