Add images to pages

--- a/recipes/margaritas.html
+++ b/recipes/margaritas.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Margarita time</h1>
+    <img src="../img/margarita.jpg">
+
+    <h2>Classic, dare we say classy, Margarita</h2>
+    <h3>Ingredients</h3>
+    <h3>Instructions</h3>
+
+
 </body>
 </html>
