--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -9,6 +9,12 @@
 
 <body>
     <h1>Basic (But Delicious...) Sourdough Loaf</h1>
+    <img src="../img/sourdough.jpg">
+    <h2>Delicious. Simple. Sourdough.</h2>
+    <h3>Ingredients</h3>
+    <h3>Instructions</h3>
+
+
 </body>
 
 </html>
