--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Sourdough Pizza Crust</h1>
+    <img src="../img/sourdough-pizza-crust.png">
+    <h2>Pizza Night</h2>
+    <h3>Ingredients</h3>
+    <h3>Instructions</h3>
 </body>
 </html>
