Add text to 3 recipes

--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -11,6 +11,21 @@
     <img src="../img/sourdough-pizza-dough.jpg">
     <h2>Pizza Night</h2>
     <h3>Ingredients</h3>
+        <ul>
+            <li>50g Sourdough starter</li>
+            <li>350g Water (at 80 degree F)</li>
+            <li>30g Olive Oil</li>
+            <li>410g Bread Flour</li>
+            <li>100g Whole Wheat Flour</li>
+            <li>1 1/2 tsp Fine Sea Salt</li>
+            <li>Preferred pizza sauce, toppings, cheese</li>
+        </ul>
     <h3>Instructions</h3>
+        <ol>
+            <li>Night before pizza night: Mix the ingredients to form shaggy dough. After 30 minutes, fold the dough by hand a few times to knead it into softer, more playable dough. Ferment overnight at room temperature.</li>
+            <li>Morning of pizza night: Flour countertop and divide dough into 4 equal pieces for 4 11" pizzas. Shape the Dough by folding each side into the middle, then the top and bottom. Flip it over and allow to rest. Meanwhile apply olive oil to proofing bowls. After bench rest, shape dough into dough balls and transfer to proofing container seam side down, cover, and place in refrigerator to begin proofing.</li>
+            <li>Afternoon before pizza night: Pull dough out of the refrigerator to proof at room temperature for 2-3 hours before baking.</li>
+            <li>Pizza night: Shape and Bake! Preheat the oven to 550 degrees F. Prepare all ingredients. Use fingertips and back of hands to shape pizza dough into disc shape without ripping. Transfer to parchment paper and apply ingredients. Bake for 7-9 minutes, turning pizza with pizza peel halfway through, until dough is golden brown with some charring. Rest for five minutes, then dig in!</li>
+        </ol>
 </body>
 </html>
