--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -10,10 +10,35 @@
 <body>
     <h1>Basic (But Delicious...) Sourdough Loaf</h1>
     <img src="../img/sourdough.jpg">
-    
+
     <h2>Delicious. Simple. Sourdough.</h2>
     <h3>Ingredients</h3>
+        <ul>
+            <li>50g Sourdough Starter</li>
+            <li>350g Warm (but not hot!) Water</li>
+            <li>500g All Purpose Flour</li>
+            <li>12g Fine Sea Salt</li>
+        </ul>
+
     <h3>Instructions</h3>
+        <p>Day 1:</p>
+          <ol>
+            <li>Morning of Day 1: Take starter out of the refrigerator and feed</li>
+            <li>Afternoon of Day 1: Mix water into 50g of sourdough starter to dissolve starter into the water. Make sure the water is warm but not hot, around 90 degrees F works well. Then add in flour and salt and mix into shaggy dough. Cover with damp tea towel.</li>
+            <li>Every hour for 3 hours after initial mix, use wet hands and turn dough from the outside in, turning the bowel a quarter turn with every dough fold. Dough will become softer and more playable as autolysis occurs and gluten develops.</li>
+            <li>Cover and leave on room-temperature counter top overnight, allowing for bulk fermentation.</li>
+          </ol>
+        <p>Day 2:</p>
+          <ol>
+            <li>Dust proofing basket with rice flour</li>
+            <li>Turn dough gently into proofing basket. Avoid overworking dough to keep all those delicious bubbles intact.</li>
+            <li>Work gently around proofing basket, turning dough into the center to provide more structure to crust.</li>
+            <li>Cover with damp tea towel and move proofing bowel to refrigerator if planning to proof for more than 4 hours.</li>
+            <li>When ready to bake, preheat oven and dutch ovens to 500 degrees F.</li>
+            <li>Remove proofing baskets from refrigerator and turn onto parchment paper. Score confidently with razor.</li>
+            <li>Place dough into dutch ovens, covered, for 25 minutes. Then remove cover and bake for another 20 minutes or until crust is a deep caramel color.</li>
+            <li>Allow for bread to cool as long as you can stand it, then enjoy!</li>
+          </ol>
 
 
 </body>
