--- a/recipes/margaritas.html
+++ b/recipes/margaritas.html
@@ -11,8 +11,22 @@
     <img src="../img/margarita.jpg">
 
     <h2>Classic, dare we say classy, Margarita</h2>
+    
     <h3>Ingredients</h3>
+    <ul>
+        <li>1 oz Cointreau</li>
+        <li>1 oz Freshly squeezed lime juice</li>
+        <li>2 oz Tequila</li>
+        <li>Salt for rim (optional)</li>
+    </ul>
+   
     <h3>Instructions</h3>
+    <ol>
+        <li>Squeeze lime juice</li>
+        <li>Add tequila, lime juice, and Cointreau to cocktail shaker with ice. Shake like the dickens.</li>
+        <li>(Optional) Smear rim of glass with squeezed lime, dip glass in salt. Apply lime wedge for garnish.</li>
+        <li>Pour into your glass and enjoy your tasty beverage </li>
+    </ol>
 
 
 </body>
