Apply basic CSS

--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
          <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-          <ul>
-            <li><a href="recipes/sourdough.html">Sourdough</a></li>
-            <li><a href="recipes/fajitas.html">Chicken Fajitas</a></li>
-            <li><a href="recipes/pizza-crust.html">Sourdough Pizza Crust</a></li> 
-            <li><a href="recipes/gambas-al-ajillo.html">Gambas al Ajillo</a></li>
-            <li><a href="recipes/margaritas.html">Margarita Time</a></li>   
-        
-          </ul>
+        <h1 id="title">Odin Recipes</h1>
+            <p><a href="recipes/sourdough.html">Sourdough</a>
+            <p><a href="recipes/fajitas.html">Chicken Fajitas</a>
+            <p><a href="recipes/pizza-crust.html">Sourdough Pizza Crust</a>
+            <p><a href="recipes/gambas-al-ajillo.html">Gambas al Ajillo</a>
+            <p><a href="recipes/margaritas.html">Margarita Time</a>
+            <p><img class="fajitas-pic" src="./img/chicken-fajitas.jpg"></p>
     </body>
 </html>
