--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Fajitas</title>
 </head>
 <body>
@@ -12,8 +13,8 @@
 
     <h2>Best Weeknight Award Goes To:</h2>
     <p>Sheet pan chicken fajitas! Thank you for being there when I only have the energy to do slightly more than open a bag of orange chicken. Chop up some onions, peppers, and chicken. Throw on some spices and toss it in the oven while your chasing kids around the kitchen. 30 minutes later you have a delicious meal that tastes like it spent much more time and effort than it did.</p>
-    <h3>Ingredients</h3>
-        <ul>
+    <h3 class="ingredients">Ingredients</h3>
+        <ul class="ingredients">
             <li>2 teaspoons chili powder
             <li>2 teaspoons ground cumin
             <li>2 teaspoons dried oregano
@@ -31,9 +32,9 @@
             <li>6 8-inch flour or corn tortillas, warm
         </ul>
 
-    <h3>Instructions</h3>
+    <h3 class="instructions">Instructions</h3>
 
-        <ol>
+        <ol class="instructions">
             <li>Preheat oven to 425 degrees F</li>
             <li>In a small bowl, mix the spices together</li>
             <li>Chop peppers, onions, and chicken into similar width strips. Toss in olive oil and spice mix until thoroughly incooperated.</li>
