--- a/recipes/gambas-al-ajillo.html
+++ b/recipes/gambas-al-ajillo.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Gambas al Ajillo</title>
 </head>
 <body>
-    <h1>Gambas al Ajillo</h1>
-    <img src="../img/gambas-al-ajillo.jpg">
-    <h2>Where to begin</h2>
+    <h1 Gambas al Ajillo</h1>
+    <img class="centered" src="../img/gambas-al-ajillo.jpg">
+    <h2 Where to begin</h2>
     <p> Gambas al ajillo was one of my favorite dishes during my travels in Spain. This would be brought out to us with the oil still boiling in the bowels. All that is needed is some good crusty bread to soak up all that goodness!    </p>
-    <h3>Ingredients</h3>
+    <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li>1 lb large shrimp, peeled and deveined</li>
             <li>Kosher salt</li>
@@ -23,13 +24,13 @@
             <li>Juice of 1/2 Lemon</li>
             <li>1/2 cup chopped fresh parsley</li>
         </ul>
-    <h3>Instructions</h3>
+    <h3 class="instructions">Instructions</h3>
         <ol>
             <li>Pat the shrimp dry and season with kosher salt. Set aside.</li>
             <li>Heat the extra virgin olive oil over medium heat until shimmering. Add the garlic and red pepper flakes. Cook for 1 minute or until the garlic begins to brown.</li>
             <li>Add the shrimp and paprika. Cook briefly, tossing regularly, until the flesh turns opaque (about 3 minutes or so; this will depend on the size of the shrimp). Remove the pan from the heat.</li>
             <li>Stir in sherry, lemon juice and parsley.</li>
-            <li>Transfer the shrimp and sauce to a serving bowl. Serve with some delicious sourdough bread.</li>
+            <li>Transfer the shrimp and sauce to a serving bowl. Serve with delicious sourdough bread.</li>
             </li>
         </ol>
 
