--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Sourdough</title>
 </head>
 
@@ -12,7 +13,7 @@
     <img src="../img/sourdough.jpg">
 
     <h2>Delicious. Simple. Sourdough.</h2>
-    <h3>Ingredients</h3>
+    <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li>50g Sourdough Starter</li>
             <li>350g Warm (but not hot!) Water</li>
@@ -20,7 +21,7 @@
             <li>12g Fine Sea Salt</li>
         </ul>
 
-    <h3>Instructions</h3>
+    <h3 class="instructions">Instructions</h3>
         <p>Day 1:</p>
           <ol>
             <li>Morning of Day 1: Take starter out of the refrigerator and feed</li>
