--- a/recipes/gambas-al-ajillo.html
+++ b/recipes/gambas-al-ajillo.html
@@ -8,11 +8,11 @@
     <title>Gambas al Ajillo</title>
 </head>
 <body>
-    <h1 Gambas al Ajillo</h1>
-    <img class="centered" src="../img/gambas-al-ajillo.jpg">
-    <h2 Where to begin</h2>
-    <p> Gambas al ajillo was one of my favorite dishes during my travels in Spain. This would be brought out to us with the oil still boiling in the bowels. All that is needed is some good crusty bread to soak up all that goodness!    </p>
-    <h3 class="ingredients">Ingredients</h3>
+    <h1>Gambas al Ajillo</h1>
+    <img src="../img/gambas-al-ajillo.jpg">
+    <h2>Where to begin</h2>
+    <div> Gambas al ajillo was one of my favorite dishes during my travels in Spain. This would be brought out to us with the oil still boiling in the bowels. All that is needed is some good crusty bread to soak up all that goodness!</div>
+    <h3>Ingredients</h3>
         <ul>
             <li>1 lb large shrimp, peeled and deveined</li>
             <li>Kosher salt</li>
@@ -24,7 +24,7 @@
             <li>Juice of 1/2 Lemon</li>
             <li>1/2 cup chopped fresh parsley</li>
         </ul>
-    <h3 class="instructions">Instructions</h3>
+    <h3>Instructions</h3>
         <ol>
             <li>Pat the shrimp dry and season with kosher salt. Set aside.</li>
             <li>Heat the extra virgin olive oil over medium heat until shimmering. Add the garlic and red pepper flakes. Cook for 1 minute or until the garlic begins to brown.</li>
