--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -11,7 +11,7 @@
     <h1>Sourdough Pizza Crust</h1>
     <img src="../img/sourdough-pizza-dough.jpg">
     <h2>Pizza Night</h2>
-    <h3 class="ingredients">Ingredients</h3>
+    <h3>Ingredients</h3>
         <ul>
             <li>50g Sourdough starter</li>
             <li>350g Water (at 80 degree F)</li>
@@ -21,7 +21,7 @@
             <li>1 1/2 tsp Fine Sea Salt</li>
             <li>Preferred pizza sauce, toppings, cheese</li>
         </ul>
-    <h3 class="instructions">Instructions</h3>
+    <h3>Instructions</h3>
         <ol>
             <li>Night before pizza night: Mix the ingredients to form shaggy dough. After 30 minutes, fold the dough by hand a few times to knead it into softer, more playable dough. Ferment overnight at room temperature.</li>
             <li>Morning of pizza night: Flour countertop and divide dough into 4 equal pieces for 4 11" pizzas. Shape the Dough by folding each side into the middle, then the top and bottom. Flip it over and allow to rest. Meanwhile apply olive oil to proofing bowls. After bench rest, shape dough into dough balls and transfer to proofing container seam side down, cover, and place in refrigerator to begin proofing.</li>
