--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1>Basic (But Delicious...) Sourdough Loaf</h1>
+    <h1>Basic Sourdough Loaf</h1>
     <img src="../img/sourdough.jpg">
 
     <h2>Delicious. Simple. Sourdough.</h2>
-    <h3 class="ingredients">Ingredients</h3>
+    <h3>Ingredients</h3>
         <ul>
             <li>50g Sourdough Starter</li>
             <li>350g Warm (but not hot!) Water</li>
@@ -21,7 +21,7 @@
             <li>12g Fine Sea Salt</li>
         </ul>
 
-    <h3 class="instructions">Instructions</h3>
+    <h3>Instructions</h3>
         <p>Day 1:</p>
           <ol>
             <li>Morning of Day 1: Take starter out of the refrigerator and feed</li>
