--- a/recipes/margaritas.html
+++ b/recipes/margaritas.html
@@ -13,7 +13,7 @@
 
     <h2>Classic, dare we say classy, Margarita</h2>
     
-    <h3 class="ingredients">Ingredients</h3>
+    <h3>Ingredients</h3>
     <ul>
         <li>1 oz Cointreau</li>
         <li>1 oz Freshly squeezed lime juice</li>
@@ -21,7 +21,7 @@
         <li>Salt for rim (optional)</li>
     </ul>
    
-    <h3 class="instructions">Instructions</h3>
+    <h3>Instructions</h3>
     <ol>
         <li>Squeeze lime juice</li>
         <li>Add tequila, lime juice, and Cointreau to cocktail shaker with ice. Shake like the dickens.</li>
